test/integration/invalid-href/pages/[post].js
export default function Page() {
  return 'hi from post'
}
